crates/tinyone_core/tests/programs/fail_compile/009_module_top_level_executable_code.to
# Use this as an imported module; it should fail because imported modules may not contain top-level executable code.
export fn ok() { return 1 }
print 1
